--- a/Frontend/input.css
+++ b/Frontend/input.css
@@ -3,5 +3,21 @@
 @tailwind utilities;
 
 body {
-    @apply font-sans;
+    @apply font-sans bg-gray-100 mb-12;
+}
+
+.container {
+    @apply px-6;
+}
+
+.btn {
+    @apply px-2.5 py-2 text-center font-medium text-sm;
+}
+
+.btn-primary {
+    @apply bg-primary text-white;
+}
+
+.transaction {
+    @apply border border-black rounded-md px-2 py-1.5 flex mt-4 font-medium text-sm;
 }
