--- a/Frontend/input.css
+++ b/Frontend/input.css
@@ -17,7 +17,13 @@ body {
 .btn-primary {
     @apply bg-primary text-white;
 }
+.btn-dark {
+    @apply bg-primary-dark text-white;
+}   
+.btn-green {
+    @apply bg-green-500 text-white;
+}
 
 .transaction {
-    @apply border border-black rounded-md px-2 py-1.5 flex mt-4 font-medium text-sm;
+    @apply border border-gray-400 rounded-md px-2 py-1.5 flex mt-4 text-sm items-center;
 }
