--- a/Frontend/input.css
+++ b/Frontend/input.css
@@ -36,7 +36,7 @@ body {
 }
 
 .leaderboard-name {
-    @apply flex items-center border border-gray-400 rounded p-2 mt-2;
+    @apply flex items-center border border-gray-400 rounded p-2 mt-2 bg-white;
 }
 .leaderboard-name .circle {
     @apply rounded-full text-white p-1 w-8 h-8 text-center font-semibold mr-4;
